src/objects/QB_Term__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Id__c</fullName>
        <label>Accounting Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Day_of_Month_Due__c</fullName>
        <label>Day of Month Due</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Days__c</fullName>
        <label>Due Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Next_Month_Days__c</fullName>
        <label>Due Next Month Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QB_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>STANDARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATE_DRIVEN</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>QB Term</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Due_Days__c</columns>
        <columns>Day_of_Month_Due__c</columns>
        <columns>Due_Next_Month_Days__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>QB Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>